"  * Now added an awesome language regex pattern, allows the expected .lang file format  * Simplified the Template regex  * Added the PackageManager to handle css/js compression and stuff =) "

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -1,1 +1,5 @@
-news.posted = 'Posted by %s on %s'
+news.posted = 'Posted by %s on %s';
+
+#test me blah = 'asdf'; asdf 
+
+news.other = 'Some \' other news';
