"  * Design bugs for Sample fixed "

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -10,6 +10,8 @@ deleted = 'The entry has been deleted!';
 source = 'View Source';
 
 namespace news {
+	name = 'News';
+	
 	posted = 'Posted by <b>%s</b> on %s';
 	
 	add = 'Add news';
