"  * Removed validator.prefix / validator.suffix in favor of validator.content  * Removed the try/catch blocks from the layers and moved it to Layer::handle - less code to write! :) "

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -63,10 +63,9 @@ namespace user {
 }
 
 namespace validator {
-	prefix = '<div class="inner">
-		<span class="icon go">';
-	
-	suffix = '</span></div>';
+	content = '<div class="inner">
+			<span class="icon go">%s</span>
+		</div>';
 	
 	# Default
 	rights = 'You don\'t have the necessary rights to access this page.';
