"  * Little restructuring  * Branding Framework with the name Styx  * Template addition | as \"or\"  * Added \"Clear Cache\" to sample app "

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -62,6 +62,11 @@ namespace user {
 		</div>';
 }
 
+namespace admin {
+	cache = 'Clear Cache';
+	erased = 'Cache cleared';
+}
+
 namespace validator {
 	content = '<div class="inner">
 			<span class="icon go">%s</span>
