* '''Major rework of Core-Components'''  * It is now possible to use different configurations (such as debug/production etc.)  * Use of static inside a method wherever possible. This is one great function in PHP! We now have less private static vars  * Request Class clean up + additional Methods to get certain requested data and the current URL  * Request Class is now stating and singleton  * PATH_INFO parsing is now more generic  * Request now automatically recognizes the language-header and can automatically set the application's language  * Storing the current language in a cookie added  * setCookie, removeCookie for Handler  * Cleaned up the cookie stuff  * Check for app.link if it ends with /  * Removed StaticStorage as pre php5.3 is crap - Core now fully implements all methods on itself for now  * Added german + language switch to Sample-App  * Added use of Countable in QuerySelect  * Changed all occurences of sizeof in favor of count (seems to be cooler, I still lize siezof!)  * Fixed rightCheck for admin.php in Sample-App  * Minor bugfixes and major optimizations

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -10,8 +10,6 @@ deleted = 'The entry has been deleted!';
 source = 'View Source';
 
 namespace news {
-	name = 'News';
-	
 	posted = 'Posted by <b>%s</b> on %s';
 	
 	add = 'Add news';
@@ -83,6 +81,7 @@ namespace validator {
 	default = 'The field "<b>%s</b>" contains an invalid value.';
 	
 	# Custom
+	rightsWrapped = '<div class="inner">You don\'t have the necessary rights to access this page.</div>';
 	login = 'You have entered an invalid username or password.';
 	onlyedit = 'You can only edit pages but not add new ones.';
 }
