* Completely reworked the way content-types are used  * Added numerous Content-Type classes  * System is now flexible as hell. Content-Type can be changed at any time. Any layer event can change the content type if desired  * Moved Page::behaviour to Request::behaviour and only returns the desired content-type and not the one actually used  * Removed auto form population on ValidatorException in Layer (to be added again later)  * Fixed minor bugs  * "handler" string in URL is now completely generic and can be removed if wanted  * Minor cleanup (more still to come)  * '''Styx is now unstable and needs lots of testing (+ unit tests)'''

--- a/Public/Sample/Language/de.lang
+++ b/Public/Sample/Language/de.lang
@@ -72,7 +72,7 @@ namespace validator {
 	# Default
 	rights = 'Dir fehlen die erforderlichen Rechte um diese Seite aufzurufen.';
 	session = 'Die Sitzung ist abgelaufen. Bitte versuche es noch einmal.';
-	handler = 'Die Seite weiß nicht, wie die angeforderte Adresse verarbeitet werden soll.';
+	contenttype = 'Die Seite weiß nicht, wie die angeforderte Adresse verarbeitet werden soll.';
 	notempty = 'Das Feld "<b>%s</b>" darf nicht leer sein';
 	
 	data = 'Es war nicht möglich die eingegeben Daten zu verarbeiten. Bitte versuche es noch einmal.';
