* Changed request data parsing and internal layout  * Cleaned up request stuff  * Packages now use routes instead of the Request Class  * Minor fixes

--- a/Public/Sample/Language/de.lang
+++ b/Public/Sample/Language/de.lang
@@ -61,7 +61,10 @@ namespace user {
 
 namespace admin {
 	cache = 'Cache löschen';
-	erased = 'Cache gelöscht';
+	cacheerased = 'Cache gelöscht';
+	
+	allcache = 'Filecache und Cache löschen';
+	allcacheerased = 'Filecache und Cache gelöscht';
 }
 
 namespace validator {
