* Added group/having/join to QuerySelect  * Changed QuerySelect::quantity to not affect the instance itself  * "Application Hooks" in Form of an Application class with events which are only fired if the class and the events are there  * Minor bugfixes / cleanups

--- a/Public/Sample/Language/de.lang
+++ b/Public/Sample/Language/de.lang
@@ -40,7 +40,7 @@ namespace framework {
 		<br/><br/>
 		Wenn du helfen / daran arbeiten / Schreibrechte für svn oder Sonstiges möchtest, bitte kontaktiere
 		mich: <a href="mailto:christoph.pojer@gmail.com">E-Mail</a> |
-		<a href="http://og5.net/christoph" target="portfolio">Portfolio</a>';
+		<a href="http://og5.net/christoph">Portfolio</a>';
 }
 
 namespace user {
