--- a/Public/ProjectTemplate/Language/en.lang
+++ b/Public/ProjectTemplate/Language/en.lang
@@ -8,6 +8,11 @@ confirmdelete = 'Are you sure to delete this entry?';
 deleted = 'The entry has been deleted!';
 
 running = 'Running %s';
+htaccess = 'If you can read this you most probably forgot to rename the file my.htaccess to .htaccess or mod_rewrite in your Apache-Installation is disabled.
+	<br/><br/>
+	You will see a nicely designed template if you fix this and then you are ready to go ;)
+	';
+
 description = 'If you can read this, it seems like you installed this ProjectTemplate just fine! There is one more step included before you can start
 		creating your application: After changing the "secure"-String in your Configuration you should once reset your password. Note that you should
 		not change the "secure"-String at any time as it would invalidate all passwords. Please never expose this string and keep it private.
