--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -30,10 +30,10 @@ namespace page {
 
 # The namespace for the framework :)
 namespace framework {
-	description = '<span class="blue">Styx</span> is a PHP-Framework in an early alpha
-		stage.<br/><br/>
+	description = '<span class="blue">Styx</span> is a PHP-Framework currently in development.
+		<br/><br/>
 		You can checkout the code by doing<br/>
-			<span class="blue icon">svn checkout http://framework.og5.net/svn/</span>
+			<span class="blue icon">svn checkout http://styx.og5.net/svn/</span>
 		<br/><br/>
 		If you want to help / work on it / write access to svn or whatever, please contact
 		me: <a href="mailto:christoph.pojer@gmail.com">E-Mail</a> |
