* Language file additions

--- a/Public/Sample/Language/en.lang
+++ b/Public/Sample/Language/en.lang
@@ -103,8 +103,10 @@ namespace validator {
 	rights = 'You don\'t have the necessary rights to access this page.';
 	session = 'Your session has been expired. Please try again.';
 	contenttype = 'The Webserver does not know how to process your request.';
-	notempty = 'The field "<b>%s</b>" must not be empty';
+	notempty = 'The field "<b>%s</b>" must not be empty.';
 	
+	length = 'The field "<b>%s</b>" is of an invalid length.';
+	mail = 'The field "<b>%s</b>" must contain a valid E-Mail-Address.';
 	data = 'It was not possible to process your input data. Please try again.';
 	pagetitle = 'The field "<b>%s</b>" can only contain letters, numbers or an underscore (_).';
 	default = 'The field "<b>%s</b>" contains an invalid value.';
