--- a/Public/ProjectTemplate/Language/en.lang
+++ b/Public/ProjectTemplate/Language/en.lang
@@ -69,6 +69,8 @@ namespace validator {
 	contenttype = 'The Webserver does not know how to process your request.';
 	notempty = 'The field "<b>%s</b>" must not be empty';
 	
+	length = 'The field "<b>%s</b>" is of an invalid length.';
+	mail = 'The field "<b>%s</b>" must contain a valid E-Mail-Address.';
 	data = 'It was not possible to process your input data. Please try again.';
 	pagetitle = 'The field "<b>%s</b>" can only contain letters, numbers or an underscore (_).';
 	default = 'The field "<b>%s</b>" contains an invalid value.';
