--- a/Public/Sample/Language/de.lang
+++ b/Public/Sample/Language/de.lang
@@ -103,8 +103,10 @@ namespace validator {
 	rights = 'Dir fehlen die erforderlichen Rechte um diese Seite aufzurufen.';
 	session = 'Die Sitzung ist abgelaufen. Bitte versuche es noch einmal.';
 	contenttype = 'Die Seite weiß nicht, wie die angeforderte Adresse verarbeitet werden soll.';
-	notempty = 'Das Feld "<b>%s</b>" darf nicht leer sein';
+	notempty = 'Das Feld "<b>%s</b>" darf nicht leer sein.';
 	
+	length = 'Das Feld "<b>%s</b>" hat eine ungültige Länge.';
+	mail = 'Das Feld "<b>%s</b>" muss eine gültige E-Mail-Adresse beinhalten.';
 	data = 'Es war nicht möglich die eingegeben Daten zu verarbeiten. Bitte versuche es noch einmal.';
 	pagetitle = 'Das Feld "<b>%s</b>" darf nur Buchstaben, Zahlen oder _ enthalten.';
 	default = 'Das Feld "<b>%s</b>" enthält einen ungültigen Wert.';
